# munit

./: .gitignore  README.md  meson.build  requirements.txt
calculator/: calculator-example.c
calculator/src/: calculator.c  calculator.h
calculator/unit_test/: calculator-test.c
